--- a/index.html
+++ b/index.html
@@ -13,14 +13,31 @@
         <nav class="nav-component">
           <ul class="nav-list-left nav-list">
             <li class="nav-item nav-icon">
-              <a href="#" class="nav-icon">
+              <a href="#">
                 <img src="./images/icon-menu.svg" alt="menu" />
               </a>
             </li>
-            <li class="nav-item">
-              <a href="#" class="nav-logo">
+            <li class="nav-item nav-logo">
+              <a href="#" class="nav-logo-link">
                 <img src="./images/logo.svg" alt="logo" />
               </a>
+            </li>
+          </ul>
+          <ul class="nav-list-center nav-list">
+            <li class="nav-item">
+              <a href="" class="nav-link"> Collections </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> Men </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> Women </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> About </a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link"> Contact </a>
             </li>
           </ul>
           <ul class="nav-list-right nav-list">
