cart modal created

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
             </li>
           </ul>
         </nav>
+        <aside class="cart-modal">
+          <h3 class="cart-modal-header">cart</h3>
+          <div class="cart-modal-body">
+            <div class="cart-modal-img">
+              <img src="./images/image-product-1-thumbnail.jpg" alt="img" />
+            </div>
+            <div class="cart-modal-text">
+              <p>Fall Limited Edition Sneakers</p>
+              <p class="cart-modal-price">$125.00 U+274C</p>
+            </div>
+          </div>
+        </aside>
       </header>
       <div class="product-container">
         <section class="product-img">
