cart modal responsiveness

--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             </div>
             <div class="cart-modal-text">
               <p>Fall Limited Edition Sneakers</p>
-              <p class="cart-modal-price">$125.00 U+274C</p>
+              <p class="cart-modal-price">$125.00 x <span>45</span></p>
             </div>
+            <img src="./images/icon-delete.svg" alt="" />
           </div>
+          <button class="cart-button">Checkout</button>
         </aside>
       </header>
       <div class="product-container">
