--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
             </div>
             <div class="cart-modal-text">
               <p>Fall Limited Edition Sneakers</p>
-              <p class="cart-modal-price">$125.00 x <span>45</span></p>
+              <p class="cart-modal-price">$125.00 x <span>45</span> $566.00</p>
             </div>
             <img src="./images/icon-delete.svg" alt="" />
           </div>
           <button class="cart-button">Checkout</button>
         </aside>
       </header>
-      <div class="product-container">
+      <section class="product-container">
         <section class="product-img">
           <div class="product-carousel">
             <img src="./images/image-product-1.jpg" class="product-1" alt="" />
@@ -126,7 +126,35 @@
             </button>
           </div>
         </section>
-      </div>
+      </section>
+      <section id="lightbox-product">
+        <section class="product-img">
+          <img src="./images/icon-close.svg" alt="" />
+          <div class="product-carousel">
+            <img src="./images/image-product-1.jpg" class="product-1" alt="" />
+          </div>
+          <div class="prev-icon">
+            <img src="./images/icon-previous.svg" alt="" />
+          </div>
+          <div class="next-icon">
+            <img src="./images/icon-next.svg" alt="" />
+          </div>
+          <div class="product-thumbnail">
+            <div class="thumbnail-img">
+              <img src="./images/image-product-1-thumbnail.jpg" alt="" />
+            </div>
+            <div class="thumbnail-img">
+              <img src="./images/image-product-2-thumbnail.jpg" alt="" />
+            </div>
+            <div class="thumbnail-img">
+              <img src="./images/image-product-3-thumbnail.jpg" alt="" />
+            </div>
+            <div class="thumbnail-img">
+              <img src="./images/image-product-4-thumbnail.jpg" alt="" />
+            </div>
+          </div>
+        </section>
+      </section>
     </div>
     <script src="./app.js"></script>
   </body>
