--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
           <div class="product-carousel">
             <img src="./images/image-product-1.jpg" class="product-1" alt="" />
           </div>
-          <div class="prev-icon">
+          <div class="prev-icon light-prev-icon">
             <img src="./images/icon-previous.svg" alt="" />
           </div>
-          <div class="next-icon">
+          <div class="next-icon light-next-icon">
             <img src="./images/icon-next.svg" alt="" />
           </div>
           <div class="product-thumbnail">
