--- a/index.html
+++ b/index.html
@@ -130,8 +130,15 @@
       <section id="lightbox-product">
         <section class="product-img">
           <img src="./images/icon-close.svg" alt="" />
-          <div class="product-carousel">
-            <img src="./images/image-product-1.jpg" class="product-1" alt="" />
+          <div class="product-carousel light-product-carousel">
+            <img
+              src="./images/image-product-1.jpg"
+              class="product-active"
+              alt=""
+            />
+            <img src="./images/image-product-2.jpg" alt="" />
+            <img src="./images/image-product-3.jpg" alt="" />
+            <img src="./images/image-product-4.jpg" alt="" />
           </div>
           <div class="prev-icon light-prev-icon">
             <img src="./images/icon-previous.svg" alt="" />
@@ -139,7 +146,7 @@
           <div class="next-icon light-next-icon">
             <img src="./images/icon-next.svg" alt="" />
           </div>
-          <div class="product-thumbnail">
+          <div class="product-thumbnail light-product-thumbnail">
             <div class="thumbnail-img">
               <img src="./images/image-product-1-thumbnail.jpg" alt="" />
             </div>
