product navigation function implemented

--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
             <img src="./images/icon-next.svg" alt="" />
           </div>
           <div class="product-thumbnail">
-            <div class="thumbnail-img">
+            <div class="thumbnail-img thumbnail-product">
               <img src="./images/image-product-1-thumbnail.jpg" alt="" />
             </div>
-            <div class="thumbnail-img">
+            <div class="thumbnail-img thumbnail-product">
               <img src="./images/image-product-2-thumbnail.jpg" alt="" />
             </div>
-            <div class="thumbnail-img">
+            <div class="thumbnail-img thumbnail-product">
               <img src="./images/image-product-3-thumbnail.jpg" alt="" />
             </div>
-            <div class="thumbnail-img">
+            <div class="thumbnail-img thumbnail-product">
               <img src="./images/image-product-4-thumbnail.jpg" alt="" />
             </div>
           </div>
