lightbox features fully implemented

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/favicon-32x32.png" />
     <title>Product Page</title>
   </head>
   <body>
@@ -75,8 +76,15 @@
       </header>
       <section class="product-container">
         <section class="product-img">
-          <div class="product-carousel">
-            <img src="./images/image-product-1.jpg" class="product-1" alt="" />
+          <div class="product-carousel thumbnail-Index">
+            <img
+              src="./images/image-product-1.jpg"
+              class="product-active"
+              alt=""
+            />
+            <img src="./images/image-product-2.jpg" alt="" />
+            <img src="./images/image-product-3.jpg" alt="" />
+            <img src="./images/image-product-4.jpg" alt="" />
           </div>
           <div class="prev-icon">
             <img src="./images/icon-previous.svg" alt="" />
