fonts coverted to hot-links font awesome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/favicon-32x32.png" />
-    <title>Product Page</title>
+    <script
+      src="https://kit.fontawesome.com/7489f6ff63.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>E-commerce Product Page</title>
   </head>
   <body>
     <div class="main">
@@ -87,10 +91,10 @@
             <img src="./images/image-product-4.jpg" alt="" />
           </div>
           <div class="prev-icon">
-            <img src="./images/icon-previous.svg" alt="" />
+            <i class="fa-solid fa-angle-left"></i>
           </div>
           <div class="next-icon">
-            <img src="./images/icon-next.svg" alt="" />
+            <i class="fa-solid fa-angle-right"></i>
           </div>
           <div class="product-thumbnail">
             <div class="thumbnail-img thumbnail-product">
@@ -129,7 +133,7 @@
               <img class="plus-count" src="./images/icon-plus.svg" alt="" />
             </div>
             <button class="button">
-              <img src="./images/icon-cart.svg" alt="" />
+              <i class="fa-solid fa-cart-shopping"></i>
               <p>Add to cart</p>
             </button>
           </div>
@@ -137,7 +141,7 @@
       </section>
       <section id="lightbox-product">
         <section class="product-img">
-          <img src="./images/icon-close.svg" alt="" />
+          <i class="fa-solid fa-xmark"></i>
           <div class="product-carousel light-product-carousel">
             <img
               src="./images/image-product-1.jpg"
