side nav bar made functional

--- a/index.html
+++ b/index.html
@@ -14,12 +14,32 @@
   </head>
   <body>
     <div class="main">
+      <aside class="side-navbar">
+        <i class="fa-solid fa-xmark menu-close"></i>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="" class="nav-link"> Collections </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"> Men </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"> Women </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"> About </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link"> Contact </a>
+          </li>
+        </ul>
+      </aside>
       <header>
         <nav class="nav-component">
           <ul class="nav-list-left nav-list">
             <li class="nav-item nav-icon">
               <a href="#">
-                <img src="./images/icon-menu.svg" alt="menu" />
+                <img src="./images/icon-menu.svg" class="menu-btn" alt="menu" />
               </a>
             </li>
             <li class="nav-item nav-logo">
@@ -141,7 +161,7 @@
       </section>
       <section id="lightbox-product">
         <section class="product-img">
-          <i class="fa-solid fa-xmark"></i>
+          <i class="fa-solid fa-xmark close-icon"></i>
           <div class="product-carousel light-product-carousel">
             <img
               src="./images/image-product-1.jpg"
