cart modal refactored code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <a href="#" class="nav-cart">
                 <img src="./images/icon-cart.svg" alt="menu" />
               </a>
-              <span class="item-no"></span>
+              <p class="item-no"></p>
             </li>
             <li class="nav-item">
               <a href="#">
@@ -90,8 +90,10 @@
               <img src="./images/image-product-1-thumbnail.jpg" alt="img" />
             </div>
             <div class="cart-modal-text">
-              <p>Fall Limited Edition Sneakers</p>
-              <p class="cart-modal-price">$125.00 x <span>45</span> $566.00</p>
+              <h4>Fall Limited Edition Sneakers</h4>
+              <p class="cart-modal-price">$125.00 &times;</p>
+              <p class="cart-modal-count">45</p>
+              <p class="cart-modal-total">$566</p>
             </div>
             <img src="./images/icon-delete.svg" alt="" />
           </div>
